--- a/Overview/index.html
+++ b/Overview/index.html
@@ -10,6 +10,6 @@
     <!-- <script src="practice_p2.js"></script> -->
     <!-- <script src="practice_p3.js"></script> -->
     <!-- <script src="HJsW_p2_1.js"></script> -->
-    <script src="closures_p2_2.js"></script>
+    <!-- <script src="closures_p2_2.js"></script> -->
 </body>
 </html>
